testsuite/tests/ghci/should_fail/GHCiErrorIndexLinks.script
print $ 1729 + "hello from GHCi!"
